<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/DialogRootTag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/DialogTopSection">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_edit_text_list_name"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
            style="@style/MyEditTextStyle"
            android:theme="@style/MyEditTextTheme"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/DialogButtonSection">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_cancel"
            style="@style/DialogButton"/>

        <Button
            android:id="@+id/button_save_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_save_as"
            style="@style/DialogButton"/>
    </LinearLayout>
</LinearLayout>