<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/DialogRootTag">

    <LinearLayout
        android:id="@+id/ll_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/empty_dialog_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogOpenDeleteListEmptyMsg"
            android:text="@string/empty_msg"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/DialogButtonSection">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_cancel"
            style="@style/DialogButton"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_delete"
            style="@style/DialogButton"/>
    </LinearLayout>
</LinearLayout>