<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/DialogAttachmentRootTag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/DialogTopSection">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/button_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/DialogImageButton">

                <ImageView
                    android:layout_width="@dimen/dialog_add_extra_image_height_width"
                    android:layout_height="@dimen/dialog_add_extra_image_height_width"
                    android:src="@drawable/ic_gallery"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_attachment_button_gallery"
                    style="@style/DialogAttachmentButtonText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="70dp"
                style="@style/DialogImageButton">

                <ImageView
                    android:layout_width="@dimen/dialog_add_extra_image_height_width"
                    android:layout_height="@dimen/dialog_add_extra_image_height_width"
                    android:src="@drawable/ic_camera"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_attachment_button_camera"
                    style="@style/DialogAttachmentButtonText"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/DialogButtonSection">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_cancel"
            style="@style/DialogButton"/>
    </LinearLayout>

</LinearLayout>